--- a/src/components/editor/editor.css
+++ b/src/components/editor/editor.css
@@ -8,7 +8,7 @@
   color: #263238;
 }
 
-.editor textarea {
+.editor #codeArea {
   outline: none;
   padding-left: 60px !important;
 }
@@ -17,7 +17,7 @@
   padding-left: 60px !important;
 }
 
-.editor span {
+.editor .editorLineNumber {
   position: absolute;
   left: 0px;
   color: #e91e63;
